Fix /same width for each navigation link on mobile

--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -1,7 +1,7 @@
 @use 'sass:math';
 
-@import '../../sass/colors';
-@import '../../sass/mixins';
+@import '@/sass/colors';
+@import '@/sass/mixins';
 
 .nav-container{
     display: flex;
@@ -49,7 +49,9 @@
     
     }
     @media(width<768px){
-        display: flex;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 10px;
         justify-content: space-between;
         border: 1px solid rgba($color: $color-primary, $alpha: 0.3);
         border-radius: 40px;
@@ -57,6 +59,10 @@
         padding: 0px 20px;
 
         position: relative;
+        a{
+            width: 100%;
+            text-align: center;
+        }
     }
 }
 
